--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .App {
   text-align: center;
   display: grid;
-  grid-template-columns: 1% 31.33% 31.33% 31.33% 1%;
+  grid-template-columns: 5% 29% 29% 29% 5%;
   grid-gap: 1%;
   grid-auto-rows: minmax(100px, auto);
   font-family: 'Lato', sans-serif;
@@ -41,14 +41,14 @@
   grid-column: 2 / 5;
   grid-row: 3;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr;
   grid-gap: 1%;
   grid-auto-rows: minmax(100px, auto);
 }
 
 .Projects .project{
-  grid-column: 1 / 2;
-  grid-row: 1;
+  /* grid-column: 1 / 2;
+  grid-row: 1; */
   padding: 1em;
   margin-top: 1%;
   background-color: #D3D3D3;
@@ -58,15 +58,28 @@
   border-radius: 1em;
   color:inherit;
   text-decoration: none;
+
+  text-align: left;
+
+  display: grid;
+  grid-template-columns: auto auto ;
+  grid-gap: 1%;
+  grid-auto-rows: minmax(100px, auto);
+
 }
 
 .project img{
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
   border-radius: 1em;
 }
 
+
 .project .ProjectSubtext{
-  color: #6b6b6b
+  color: #6b6b6b;
+  margin-top: -1em;
 }
 
 .project .ProjectText{
