--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   background-color: #D3D3D3;
   padding: 1em;
   border-style: solid;
-  border-color: #a0a0a0;
+  border-color: #00000;
   border-width: .25em;
   border-radius: 1em;
 }
@@ -25,13 +25,13 @@
 
 .SecHeader {
   grid-column: 2 / 5;
-  grid-row: 2;
+  /* grid-row: 2; */
   padding: .25em;
   margin-top: 1%;
   margin-bottom: .5%;
   background-color: #D3D3D3;
   border-style: solid;
-  border-color: #a0a0a0;
+  border-color: #00000;
   border-width: .25em;
   border-radius: 1em;
 }
@@ -39,7 +39,7 @@
 
 .Projects {
   grid-column: 2 / 5;
-  grid-row: 3;
+  /* grid-row: 3; */
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 1%;
@@ -89,12 +89,12 @@
 
 .Footer {
   grid-column: 2 / 5;
-  grid-row: 4;
+  grid-row: 8;
   background-color: #D3D3D3;
   padding: 1em;
   margin-top: 1%;
   border-style: solid;
-  border-color: #a0a0a0;
+  border-color: #00000;
   border-width: .25em;
   border-radius: 1em;
 
