--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,23 @@
   text-decoration-color: 'black';
 }
 
+
 .Header {
   grid-column: 2 / 5;
   grid-row: 1;
   background-color: #D3D3D3;
+  /*
   padding: 1em;
   border-style: solid;
   border-color: #00000;
   border-width: .25em;
+  border-radius: 1em; */
+}
+
+.Header img{
+
+  width: 1%;
+  height: auto;
   border-radius: 1em;
 }
 
@@ -30,10 +39,11 @@
   margin-top: 1%;
   margin-bottom: .5%;
   background-color: #D3D3D3;
+  /*
   border-style: solid;
   border-color: #00000;
   border-width: .25em;
-  border-radius: 1em;
+  border-radius: 1em; */
 }
 
 
@@ -51,11 +61,11 @@
   grid-row: 1; */
   padding: 1em;
   margin-top: 1%;
-  background-color: #D3D3D3;
+  /* background-color: #D3D3D3;
   border-style: solid;
   border-color: #a0a0a0;
   border-width: .25em;
-  border-radius: 1em;
+  border-radius: 1em; */
   color:inherit;
   text-decoration: none;
 
@@ -90,13 +100,13 @@
 .Footer {
   grid-column: 2 / 5;
   grid-row: 8;
-  background-color: #D3D3D3;
+  background-color: #ffb7b7;
   padding: 1em;
   margin-top: 1%;
-  border-style: solid;
+  /* border-style: solid;
   border-color: #00000;
   border-width: .25em;
-  border-radius: 1em;
+  border-radius: 1em; */
 
   color:inherit;
   text-decoration: none;
