--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .navBar button{
-  background-color: #4CAF50; /* Green */
+  background-color: #748CCD;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -24,21 +24,14 @@
 }
 
 .navBar button:hover{
-  background-color: #fff; /* Green */
-  border: none;
-  color: black;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  background-color: #8179B7; 
 }
 
 
 .Header {
   grid-column: 2 / 5;
   grid-row: 1;
-  background-color: #D3D3D3;
+  background-color: #59C3C3;
   /*
   padding: 1em;
   border-style: solid;
@@ -61,7 +54,7 @@
   padding: .25em;
   margin-top: 1%;
   margin-bottom: .5%;
-  background-color: #D3D3D3;
+  background-color: #F8969F;
   /*
   border-style: solid;
   border-color: #00000;
@@ -99,6 +92,11 @@
   grid-gap: 1%;
   grid-auto-rows: minmax(100px, auto);
 
+}
+
+
+.Projects .project:hover{
+  background-color: #EBEBEB;
 }
 
 .project img{
