--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .App {
   text-align: center;
   display: grid;
-  grid-template-columns: 5% 29% 29% 29% 5%;
+  grid-template-columns: 1% 31% 31% 31% 1%;
   grid-gap: 1%;
   grid-auto-rows: minmax(100px, auto);
   font-family: 'Lato', sans-serif;
@@ -12,19 +12,19 @@
 }
 
 .navBar button{
-  background-color: #748CCD;
+  background-color: inherit;
   border: none;
-  color: white;
+  color: black;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
+  text-decoration: bold;
   display: inline-block;
-  font-size: 16px;
+  font-size: 22px;
   margin: 1%
 }
 
 .navBar button:hover{
-  background-color: #8179B7; 
+  background-color: #8179B7;
 }
 
 
@@ -117,8 +117,8 @@
   text-align: justify;
 }
 
-
-.Footer {
+/*
+.About {
   grid-column: 2 / 5;
   grid-row: 8;
   background-color: #ffb7b7;
@@ -127,8 +127,8 @@
   /* border-style: solid;
   border-color: #00000;
   border-width: .25em;
-  border-radius: 1em; */
+  border-radius: 1em; *//*
 
   color:inherit;
   text-decoration: none;
-}
+} */
