--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   grid-auto-rows: minmax(100px, auto);
   font-family: 'Lato', sans-serif;
   text-decoration-color: 'black';
+  background-color: white;
 }
 
 .navBar button{
@@ -20,7 +21,10 @@
   text-decoration: bold;
   display: inline-block;
   font-size: 22px;
-  margin: 1%
+  margin: 1%;
+  border-radius: .25em;
+  outline-color: #8179B7;
+
 }
 
 .navBar button:hover{
@@ -32,6 +36,7 @@
   grid-column: 2 / 5;
   grid-row: 1;
   background-color: #59C3C3;
+  border-radius: .25em
   /*
   padding: 1em;
   border-style: solid;
@@ -55,6 +60,7 @@
   margin-top: 1%;
   margin-bottom: .5%;
   background-color: #F8969F;
+  border-radius: .25em
   /*
   border-style: solid;
   border-color: #00000;
@@ -91,6 +97,7 @@
   grid-template-columns: auto auto ;
   grid-gap: 1%;
   grid-auto-rows: minmax(100px, auto);
+  border-radius: .25em
 
 }
 
