--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,12 @@
   margin-top: -1em;
 }
 
+.project .ProjectSubtext a{
+  text-decoration: none;
+  color: black;
+}
+
+
 .project .ProjectText{
   text-align: justify;
 }
